09Oct07=======================================================================
1. Added *VERY* important change to prevent loops on PC9x sentences.
06Oct07=======================================================================
1. added the possibility of having a motd_ax25 especially for sending to
radio connections after a suggestion by Paolo YV1DIG.
05Oct07=======================================================================
1. Handle PC61 from VE1CC clusters as PC11.
01Oct07=======================================================================
1. fix .gtkconsole_data creation bug.
27Sep07=======================================================================
1. Fixed gtkconsole to split out all the windows. See
/spider/gtkconsole/README for installation and usage instructions. This
program will work on both Windows and Linux provided the extra Gtk2 perl
libraries + dependencies are installed. Instructions for getting them are in
the README file.
25Sep07=======================================================================
1. Fix mrtg command so that it does not require /var/lock (which anyway gets
removed and recreated on boot - and the debianised mrtg does not recognise
that) nor /var/lib/mrtg for the confcache (whatever that is).
24Sep07=======================================================================
1. fix error message on disconnect and, BTW, fix the cause of premature
disconnections in the new PC92 code.
22Sep07=======================================================================
1. fix mrtg script so that it sets LANG='C', in addition, it appears that you 
will need to create a /var/lock/mrtg and /var/lib/mrtg directory, both with
chmod 01777 /var/lock/mrtg /var/lib/mrtg. They may already exist but without
the correct permissions.
15Sep07=======================================================================
1. Add *optional* INET6 connectivity. In order to use this you must load